@startuml

interface RenderInterface {
  {abstract} reRenderView()
}
interface PaginationInterface {
  {abstract} first(entities: T[])
  {abstract} prev(entities: T[])
  {abstract} next(entities: T[])
  {abstract} latest(entities: T[])
  {abstract} hasPrev(entities: T[]): Boolean
  {abstract} hasNext(entities: T[]): Boolean
  {abstract} setCurrentPage(pageNumber: Number)
  {abstract} getCurrentPage(): Number
  {abstract} getLatestPage(entities: T[]): Number
  {abstract} getLimitRows (): Number
  {abstract} setLimitRows (max)
  {abstract} getArrayLimitRows (): Number[]
  {abstract} getCutEntities(entities: T[]): Array
}
class Pagination {
  table
  handleChange()
}
Pagination o-- "0 .. *" Entity
PaginationInterface <|.. Pagination
RenderInterface <-o  Pagination
note left on link
handleChange() {
  // ... code ...
  table.reRenderView()
}
end note
Pagination <- CLIENT
note left on link
  pad.setCurrentPage(34)
end note
@enduml
